# om-server

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  buf.gen.yaml
config/: weather_bake.toml
docs/: open-meteo-data.md  open-meteo-spatial.md
docs/data/variables/: CATALOG.md  README.md  dwd_icon-run.txt  dwd_icon-spatial.txt  dwd_icon-timeseries.txt  ecmwf_ifs025-run.txt  ecmwf_ifs025-spatial.txt  ecmwf_ifs025-timeseries.txt  manifest.json  ncep_gfs025-run.txt  ncep_gfs025-spatial.txt  ncep_gfs025-timeseries.txt
proto/om/v1/: spatial.proto
src/: error.rs  gen.rs  lib.rs  main.rs
src/application/: active_catalog.rs  blended_point_series.rs  mod.rs  spatial.rs  sync_worker.rs  weather_bake.rs  weather_bake_wake.rs  weather_bake_worker.rs
src/domain/: catalog.rs  data_source.rs  dataset.rs  fetcher.rs  geo.rs  grid.rs  mod.rs  model.rs  om_dataset.rs  ports.rs  reader_backend.rs  spatial_run.rs  spatial_sample.rs  spatial_snapshot.rs  tile_renderer.rs  weather_bake_layer.rs  weather_colormap.rs  weather_field.rs  weather_temporal.rs
src/infrastructure/: config.rs  ecmwf.rs  http.rs  http_range_reader.rs  mod.rs  noop_tile.rs  omfiles_dataset_reader.rs  omfiles_reader.rs  pmtiles_writer.rs  range_backend.rs  resort_coverage.rs  s3_fetcher.rs  spatial_field_loader.rs  spatial_grid_cache.rs  tile_index.rs  weather_bake_profile.rs  weather_tile_renderer.rs
src/infrastructure/omfiles_dataset_reader/: mod.rs  spatial_file.rs  spatial_sampler.rs  variable_index.rs
src/infrastructure/open_meteo/: dwd.rs  dwd_icon_catalog.rs  ecmwf.rs  ecmwf_ifs025_catalog.rs  ecmwf_ifs_catalog.rs  gfs.rs  gfs025_catalog.rs  layout.rs  mod.rs  run_manifest.rs  s3_catalog.rs  sources.rs  spatial_run_catalog.rs
src/interfaces/grpc/: mod.rs  spatial_service.rs
tests/: local_mmap_test.rs  open_meteo_layout_test.rs  real_s3_metadata_test.rs  spatial_fetch_test.rs  weather_tile_test.rs
tests/common/: mod.rs
