[package]
name = "om-server"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
omfiles = { git = "https://github.com/open-meteo/rust-omfiles", rev = "cd6f08c097931100943b3677b6eaeac0b37327ee" }
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "net"] }
tonic = { version = "0.14.6", features = ["transport"] }
tonic-prost = "0.14.6"
tonic-health = "0.14.6"
tonic-reflection = "0.14.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
ureq = "3.3.0"

[dev-dependencies]
ndarray = "0.17.2"
tempfile = "3.27.0"

[[bin]]
name = "om-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
